# wasmcc-canvas-drawing

./: .gitignore  .gitmodules  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json
src-cc/: CMakeLists.txt  bar.cc  drawing2d.cc  drawing2d.h  hello.cc  main.cc
src-cc/miro-cpp/miro/em_scene/: CMakeLists.txt  scene_manager.cc  scene_manager.h  scene_module.cc  scene_module.h  scene_renderer.cc  scene_renderer.h
src-cc/miro-cpp/miro/sketch/: CMakeLists.txt  basic_shapes.cc  basic_shapes.h  geometry.h  global_scene.cc  global_scene.h  layer_element.cc  layer_element.h  layer_stack.cc  layer_stack.h  layerstack.cc  layerstack.h  miro_scene.cc  miro_scene.h
src-cc/miro-cpp/miro/studiowasm/: CMakeLists.txt  canvas_2dcontext.cc  canvas_2dcontext.h  jsportal.cc  jsportal.h  play_manager.cc  play_manager.h  scene_module.cc  scene_module.h  scene_renderer.cc  studio_module.cc  studio_module.h  util.cc  util.h
src-fe/: App.tsx  CanvasPanel.tsx  PlayCoordinator.ts  WasmSetup.ts  draftp5.ts  main.tsx
